--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "@vueform/slider": "^2.1.10",
     "leaflet": "^1.9.4",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
